[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leotools"
dynamic = ["version"]
description = "Lechner Earth Observation Toolset, containing crucial classes and functions."
readme = "README.md"
keywords = ["python", "GIS"]
license = {file = "LICENSE.txt"}
authors = [
    {name = "Rómeó Komolafe", email = "romeo.ife.komolafe@lechnerkozpont.hu"},
]

requires-python = ">=3.8,<4.0"
dependencies = [
    "numpy",
    "pandas",
    "gdal>=3.9",
    "shapely",
    "geopandas",
    "rasterio>=1.2",
]

[tool.setuptools.dynamic]
version = {attr = "leotools.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
leotools = "leotools.__main__:main"